<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.flexganttfx</groupId>
    <artifactId>gantt</artifactId>
    <version>11.12.0</version>
    <packaging>pom</packaging>
    <name>FlexGanttFX</name>
    <description>The parent project for the various FlexGanttFX modules.</description>
    <organization>
        <name>Dirk Lemmermann Software &amp; Consulting</name>
    </organization>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <javafx.version>15</javafx.version>
        <javafx.maven.plugin.version>0.0.4</javafx.maven.plugin.version>
        <controlsfx.version>11.0.1</controlsfx.version>
        <ikonli.version>11.3.5</ikonli.version>
        <maven.javadoc.skip>false</maven.javadoc.skip>
        <jpro.version>2020.1.0-SNAPSHOT</jpro.version>
        <apache.felix.version>4.2.1</apache.felix.version>
        <client.plugin.version>0.1.20</client.plugin.version>
        <exec.maven.plugin.version>1.6.0</exec.maven.plugin.version>
    </properties>

    <modules>
        <module>FlexGanttFXCore</module>
        <module>FlexGanttFXModel</module>
        <module>FlexGanttFXView</module>
        <module>FlexGanttFXExtras</module>
        <module>FlexGanttFXSampler</module>
        <module>FlexGanttFXProject</module>
        <module>FlexGanttFXMSProject</module>
        <module>FlexGanttFXiCal</module>
        <module>FlexGanttFXExperimental</module>
        <module>FlexGanttFXLicensing</module>
        <module>FlexGanttFXEmirates</module>
        <module>FlexGanttFXTutorials</module>
        <module>FlexGanttFXEditor</module>
        <module>FlexGanttFXAssembly</module>
        <module>FlexGanttFXCovid</module>
    </modules>

    <build>
        <plugins>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.22.1</version>
                <configuration>
                    <forkCount>0</forkCount>
                    <argLine>
                        --add-exports javafx.graphics/com.sun.javafx.application=ALL-UNNAMED
                    </argLine>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <source>11</source>
                    <target>11</target>
                    <release>11</release>
                </configuration>
            </plugin>

            <plugin>
                <groupId>com.google.code.maven-license-plugin</groupId>
                <artifactId>maven-license-plugin</artifactId>
                <version>1.4.0</version>
                <configuration>
                    <header>license-header.txt</header>
                    <includes>
                        <include>**/*.java</include>
                    </includes>
                    <excludes>
                        <exclude>target/**</exclude>
                        <exclude>m2-target/**</exclude>
                        <exclude>**/*.properties</exclude>
                    </excludes>
                    <properties>
                        <name>FlexGanttFX</name>
                        <holder>DLSC Software &amp; Consulting GmbH (dlsc.com)</holder>
                    </properties>
                    <encoding>UTF-8</encoding>
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>format</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>3.1.1</version>
                <configuration>
                    <windowtitle>FlexGanttFX API</windowtitle>
                    <detectLinks>false</detectLinks>
                    <links>
                        <link>https://openjfx.io/javadoc/13/</link>
                        <!--link>https://controlsfx.bitbucket.io</link -->
                    </links>

                    <groups>
                        <group>
                            <title>Core</title>
                            <packages>com.flexganttfx.core*</packages>
                        </group>
                        <group>
                            <title>Model</title>
                            <packages>com.flexganttfx.model*</packages>
                        </group>
                        <group>
                            <title>View</title>
                            <packages>com.flexganttfx.view*</packages>
                        </group>
                        <group>
                            <title>Extras</title>
                            <packages>com.flexganttfx.extras*</packages>
                        </group>
                    </groups>

                    <excludePackageNames>
                        com.flexganttfx.demo.*:com.flexganttfx.project.*:com.flexganttfx.mobile:com.flexganttfx.msproject.*:com.flexganttfx.emirates.*:com.flexganttfx.emirates.*:com.flexganttfx.editor:com.flexganttfx.ical.*:com.flexganttfx.experimental:com.lynden.gmapsfx:impl.com.flexganttfx:com.flexganttfx.tutorial:com.flexganttfx.experimental:com.flexganttfx.msproject:com.flexganttfx.licensing:com.flexganttfx.emirates:com.flexganttfx.demo:com.flexganttfx.project:com.flexganttfx.command:com.flexganttfx.bugs:com.flexganttfx.ical:com.flexganttfx.editor
                    </excludePackageNames>
                    <failOnError>false</failOnError>
                    <docfilessubdirs>true</docfilessubdirs>
                </configuration>
                <executions>
                    <execution>
                        <id>aggregate</id>
                        <phase>package</phase> <!-- bind to the packaging phase -->
                        <goals>
                            <goal>aggregate</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

        </plugins>
    </build>

    <dependencies>
        <!-- Test Dependencies -->

        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <version>5.5.1</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-params</artifactId>
            <version>5.5.1</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.testfx</groupId>
            <artifactId>testfx-junit5</artifactId>
            <version>4.0.16-alpha</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.hamcrest</groupId>
            <artifactId>hamcrest-all</artifactId>
            <version>1.3</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-all</artifactId>
            <version>1.10.19</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>de.sandec</groupId>
            <artifactId>JMemoryBuddy</artifactId>
            <version>0.2.4</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.testfx</groupId>
            <artifactId>testfx-core</artifactId>
            <version>4.0.16-alpha</version>
            <scope>test</scope>
        </dependency>

    </dependencies>

</project>